# pytwitchauthlistener

./: README.md  pyproject.toml  requirements.txt
pytwitchauthlistener/: AuthListener.py  __init__.py
